# solar-monitor

./: .env.example  .gitignore  1_PANEL.py  Dockerfile  GELISTIRME_VE_DUZELTME_ONERISI.md  Izleme_Paneli.py  KURULUM_REHBERI.txt  README.md  _fix_emoji.py  add_top_nav.py  api.py  apply_addr_patch.py  auth.py  backup.sh  collector.py  collector_async.py  collector_config.py  config.py  crm_embed.py  debug_connection.py  docker-compose.prod.yml  docker-compose.yml  fix_mekanik.py  healthcheck.py  kurulum_yap.py  migrate_alarms.py  migrate_sqlite_to_pg.py  migrate_timescale.py  modbus_diagnostics.py  modbus_probe.py  models.py  move_sidebar.py  mqtt_listener.py  notifications.py  panel.py  prometheus_exporter.py  pyproject.toml  query.py  remove_sidebar.py  replace_colors.py  (+25 more)
.github/workflows/: ci.yml
.streamlit/: config.toml  machine_id_v4
backups/: solar_2026-07-17.dump  solar_2026-07-20.dump  solar_2026-07-21.dump
grafana/dashboards/: solar-monitor.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
mosquitto/config/: mosquitto.conf
pages/: 10_Sanal_Inverter.py  1_GUNLUK_RAPOR.py  1_Gunluk_Rapor.py  2_Alarmlar.py  3_Export.py  5_Audit_Log.py  6_PDF_Rapor.py  7_Tahmin.py  8_Karsilastir.py  9_Sistem.py
static/: live_dashboard.html
