[project]
name = "solar-monitor"
version = "1.0.0"
description = "Gunes Enerjisi Santrali Izleme ve Analiz Sistemi (Modbus TCP)"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "streamlit",
    "pandas",
    "pymodbus",
    "plotly",
    "openpyxl",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
sim = [
    "pymodbus",  # sanal_inverter icin
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py", "security_tests.py"]
